# fuse-abi

./: 0001-fix-add-zerocopy-support-for-__IncompleteArrayField.patch  Cargo.toml  README.md  bindgen.sh  rustfmt.toml
.github/workflows/: ci.yml
include/: linux.h  macos.h  types.h
patches/: 0001-fix-add-zerocopy-support-for-__IncompleteArrayField.patch  0002-fix-make-FUSE_ROOT_ID-an-u64.patch
src/: lib.rs  linux.rs  macos.rs
